--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
-    "redux-undo": "^0.6.1"
+    "redux-undo": "^1.0.0-beta9-9-7"
   },
   "scripts": {
     "start": "react-scripts start",
