--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "^3.0.0"
   },
   "dependencies": {
+    "@fmfi-uk-1-ain-412/js-fol-parser": "^0.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
